fixed offcenter categories

--- a/static/Styles/category.css
+++ b/static/Styles/category.css
@@ -43,7 +43,8 @@
     flex-wrap: wrap;
     color: var(--secondary-color);
     padding: 1.5em;
-
+    /* align-items: center; */
+    justify-content: center;
 }
 .product_category_block{
     background-color: var(--primary-color);
@@ -67,7 +68,7 @@
 .subcategories{
     margin-top: 0.5em;
     display: flex;
-    align-items: baseline;
+
     flex-direction: column;
     gap: 0.4em;
 }
